# project_logistica_refactor

./: .gitignore  anotacoes_poetry.md  create_db.py  pyproject.toml  pytest.ini  readme.md
scripts_utils/: verificar_banco.py  verificar_foreign_keys.py  verificar_schema.py  verificar_sqlite_fk.py
src/database/: base.py  connection.py
src/models/: categoria.py  cliente.py  endereco.py  entrega.py  item_pedido.py  motorista.py  pedido.py  produto.py  veiculo.py
tests/: test_database_schema.py
