[project]
name = "project-logistica-refactor"
version = "0.1.0"
description = "Painel web para consultar dados logisticos normalizados"
authors = [
    {name = "Daniel",email = "f.daniel.m@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
[tool.poetry]
packages = [{ include = "src" }]
